--- a/SwiftSample/Base.lproj/Main.storyboard
+++ b/SwiftSample/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -43,7 +44,7 @@
                                 <rect key="frame" x="-4" y="0.0" width="383" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="56K-60-Yul" customClass="BarcodeReaderView" customModule="BarCodeReaderView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="56K-60-Yul">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="220"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vst-Vy-aQd">
@@ -64,39 +65,31 @@
                                     <constraint firstAttribute="height" constant="220" id="6zw-F4-kI9"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sc9-jH-tDc">
-                                <rect key="frame" x="0.0" y="228" width="375" height="439"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sc9-jH-tDc">
+                                <rect key="frame" x="0.0" y="257" width="375" height="410"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Storycell" textLabel="XJg-oV-CFW" style="IBUITableViewCellStyleDefault" id="Zgi-n1-xxp">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Zgi-n1-xxp" id="C8l-Z1-AyY">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XJg-oV-CFW">
-                                                    <rect key="frame" x="15" y="0.0" width="345" height="43"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="Tgn-bR-Bua" id="wcF-H9-Tic"/>
                                     <outlet property="delegate" destination="Tgn-bR-Bua" id="ZtT-Bf-Ida"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kgT-Ls-Q7g">
+                                <rect key="frame" x="16" y="228" width="343" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" white="0.0" alpha="0.51024721746575341" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <size key="shadowOffset" width="0.0" height="1"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="kgT-Ls-Q7g" firstAttribute="trailing" secondItem="bQc-lg-DXJ" secondAttribute="trailingMargin" id="59e-Wv-OKE"/>
+                            <constraint firstItem="sc9-jH-tDc" firstAttribute="top" secondItem="kgT-Ls-Q7g" secondAttribute="bottom" constant="8" id="7Lg-9K-e7l"/>
                             <constraint firstItem="1VY-Jz-tgI" firstAttribute="top" secondItem="sc9-jH-tDc" secondAttribute="bottom" id="G64-GJ-2Si"/>
                             <constraint firstItem="56K-60-Yul" firstAttribute="leading" secondItem="bQc-lg-DXJ" secondAttribute="leading" id="HO4-nn-F6l"/>
-                            <constraint firstItem="sc9-jH-tDc" firstAttribute="top" secondItem="56K-60-Yul" secondAttribute="bottom" constant="8" id="Kif-sp-bdc"/>
+                            <constraint firstItem="kgT-Ls-Q7g" firstAttribute="leading" secondItem="bQc-lg-DXJ" secondAttribute="leadingMargin" id="Tfo-If-sFB"/>
+                            <constraint firstItem="kgT-Ls-Q7g" firstAttribute="top" secondItem="56K-60-Yul" secondAttribute="bottom" constant="8" id="ZBc-Fx-NAL"/>
                             <constraint firstItem="sc9-jH-tDc" firstAttribute="leading" secondItem="bQc-lg-DXJ" secondAttribute="leading" id="cl9-DU-ZMy"/>
                             <constraint firstAttribute="trailing" secondItem="sc9-jH-tDc" secondAttribute="trailing" id="dgq-5G-Cs0"/>
                             <constraint firstItem="56K-60-Yul" firstAttribute="top" secondItem="bQc-lg-DXJ" secondAttribute="top" id="eJn-xS-CrF"/>
@@ -105,6 +98,7 @@
                     </view>
                     <connections>
                         <outlet property="camView" destination="56K-60-Yul" id="boq-Ah-o2h"/>
+                        <outlet property="label" destination="kgT-Ls-Q7g" id="f07-x1-lZ9"/>
                         <outlet property="storiesTableView" destination="sc9-jH-tDc" id="Ejy-pc-Lrp"/>
                     </connections>
                 </viewController>
@@ -131,7 +125,7 @@
                                 <rect key="frame" x="16" y="30" width="343" height="565"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mp4-0s-ham" customClass="BarcodeReaderView" customModule="BarCodeReaderView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mp4-0s-ham">
                                 <rect key="frame" x="16" y="30" width="343" height="216"/>
                                 <color key="backgroundColor" red="0.60350225788531087" green="0.81382074225310386" blue="0.89502208769633507" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
@@ -265,11 +259,11 @@
                                 <variation key="default">
                                     <mask key="constraints">
                                         <exclude reference="e9c-ue-WXN"/>
+                                        <exclude reference="rI0-dZ-vCN"/>
                                         <exclude reference="DRa-4c-j8V"/>
                                         <exclude reference="N1D-lm-ad5"/>
                                         <exclude reference="WhX-cR-bqX"/>
                                         <exclude reference="qYc-Xv-Ibz"/>
-                                        <exclude reference="rI0-dZ-vCN"/>
                                     </mask>
                                 </variation>
                             </view>
@@ -397,7 +391,7 @@ It's a 32 character string that should be at the bottom of the page. </string>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_check_green.png" translatesAutoresizingMaskIntoConstraints="NO" id="3KR-aJ-cq7">
-                                        <rect key="frame" x="139.5" y="299" width="64" height="64"/>
+                                        <rect key="frame" x="140" y="299" width="64" height="64"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="64" id="2UZ-7r-5F3"/>
                                             <constraint firstAttribute="width" constant="64" id="iKk-e1-zcf"/>
@@ -410,7 +404,7 @@ It's a 32 character string that should be at the bottom of the page. </string>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="p51-7R-tJQ">
-                                        <rect key="frame" x="153.5" y="312" width="37" height="37"/>
+                                        <rect key="frame" x="154" y="312" width="37" height="37"/>
                                         <color key="color" red="0.25" green="0.25" blue="0.25" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </activityIndicatorView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YZH-8x-wP4">
